--- a/index.html
+++ b/index.html
@@ -2,23 +2,27 @@
 <html>
   <head>
     <meta content="charset=utf-8">
-    <title>SADAKO</title>
+    <title>Ammelie Neth - Front End Developer</title>
     <link href="//fonts.googleapis.com/earlyaccess/mplus1p.css">
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <div class="header-text">
-          <h1>Welcome to SADAKO VILLAGE</h1>
-          <p>The bestest village to die</p>
+        <div class="screen" id="intro">
+          <header>
+            <div class="header-text">
+              <h1>Hi</h1>
+              <p>It me.</p>
+            </div>
+            <nav></nav>
+          </header>
         </div>
-        <nav></nav>
-      </header>
-      <div class="content">
-        <article></article>
-        <aside></aside>
-      </div>
+        <div class="screen" id="about">
+        </div>
+        <div class="screen" id="portfolio">
+        </div>
+        <div class="screen" id="contact">
+        </div>
     </div>
   </body>
 </html>
